<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:backgroundTint="@color/pastel"
    style="?attr/materialCardViewElevatedStyle"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".FavoritesFragment">

    <LinearLayout
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">

        <!-- Media -->
        <ImageView
            android:id="@+id/imageViewHome"
            android:layout_width="match_parent"
            android:layout_height="194dp"
            android:contentDescription="@string/content_description_media"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/mall_lincoln_plaza" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <!-- Title, secondary and supporting text -->
            <TextView
                android:id="@+id/txtTitleHome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:textAppearance="?attr/textAppearanceHeadline6" />

            <TextView
                android:id="@+id/txtSiteHome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/secondary_text"
                android:textAppearance="?attr/textAppearanceBody2"
                android:textColor="#795548" />

            <TextView
                android:id="@+id/txtCityHome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/supporting_text"
                android:textAppearance="?attr/textAppearanceBody2"
                android:textColor="#795548" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnInfo"
                style="?attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:backgroundTint="@color/white"
                android:text="@string/ver" />

        </LinearLayout>

    </LinearLayout>
</com.google.android.material.card.MaterialCardView>