<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".FavoritesFragment">

    <View
        android:id="@+id/viewTop"
        android:layout_width="411dp"
        android:layout_height="182dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageViewTop"
        android:layout_width="149dp"
        android:layout_height="99dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="56dp"
        android:src="@drawable/mall_lincoln_plaza"
        app:layout_constraintBottom_toBottomOf="@+id/viewTop"
        app:layout_constraintEnd_toStartOf="@+id/ratingBar"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/viewTop"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        android:contentDescription="TODO" />

    <TextView
        android:id="@+id/txtTitleTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/mall_lincol_plaza"
        app:layout_constraintBottom_toTopOf="@+id/txtSiteTop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageViewTop"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtSiteTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:text="@string/centro_comercial"
        app:layout_constraintBottom_toTopOf="@+id/txtCityTop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageViewTop"
        app:layout_constraintTop_toBottomOf="@+id/txtTitleTop" />

    <RatingBar
        android:id="@+id/ratingBar"
        android:layout_width="232dp"
        android:layout_height="51dp"
        android:layout_marginStart="165dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="14dp"
        android:layout_marginBottom="564dp"
        android:contentDescription="@string/HOME"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/txtCityTop"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/txtCityTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/lindora_san_jose"
        app:layout_constraintBottom_toTopOf="@+id/ratingBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageViewTop"
        app:layout_constraintTop_toBottomOf="@+id/txtSiteTop" />

</androidx.constraintlayout.widget.ConstraintLayout>