<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/imageViewHome"
        android:layout_width="match_parent"
        android:layout_height="194dp"
        android:contentDescription="@string/content_description_media"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/mall_lincoln_plaza"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/txtTitleHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="212dp"
        android:text="@string/title"
        android:textAppearance="?attr/textAppearanceHeadline6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageViewHome" />

    <TextView
        android:id="@+id/txtSiteHome"
        android:layout_width="135dp"
        android:layout_height="26dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:text="@string/secondary_text"
        android:textAppearance="?attr/textAppearanceBody2"
        android:textColor="?android:attr/textColorSecondary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/txtTitleHome" />


    <CheckBox
        android:id="@+id/cbHeart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="228dp"
        android:layout_marginEnd="84dp"
        android:button="@drawable/ic_favorite_empty"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:useMaterialThemeColors="false" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="201dp"
        android:layout_height="23dp"
        android:layout_marginTop="28dp"
        android:text="Informacion sobre el sitio"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.076"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtSiteHome" />

    <View
        android:id="@+id/divider"
        android:layout_width="409dp"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="121dp"
        android:layout_height="33dp"
        android:layout_marginStart="56dp"
        android:layout_marginBottom="160dp"
        android:drawableStart="@drawable/ic_baseline_alternate_email_24"
        android:paddingTop="10dp"
        android:text="CORREO"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="121dp"
        android:layout_height="33dp"
        android:layout_marginStart="56dp"
        android:layout_marginBottom="36dp"
        android:drawableStart="@drawable/ic_baseline_place_24"
        android:paddingTop="10dp"
        android:text="UBICACION"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="121dp"
        android:layout_height="33dp"
        android:layout_marginStart="56dp"
        android:layout_marginBottom="28dp"
        android:drawableStart="@drawable/ic_phone"
        android:paddingTop="10dp"
        android:text="TELEFONO"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/divider3"
        android:layout_width="409dp"
        android:layout_height="1dp"
        android:layout_marginTop="12dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <View
        android:id="@+id/divider2"
        android:layout_width="409dp"
        android:layout_height="1dp"
        android:layout_marginTop="4dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="44dp"
        android:backgroundTint="@color/white"
        android:drawableLeft="@drawable/ic_baseline_add_comment_24"
        android:text="Escribe una opinion"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider3"
        app:layout_constraintVertical_bias="0.87" />


</androidx.constraintlayout.widget.ConstraintLayout>